--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "npx run vite"
   functions = "functions"  # If you have serverless functions
   publish = "dist"  # Specify the build output folder
 
